# circle-routes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Toolchain-mingw32.cmake
cmake/: Toolchain-mingw32.cmake
cmake/Modules/: FindPoco.cmake
include/: algorithm.h  answer.h  little_alg.h  ndata.h  nearest_alg.h  nearest_with_ret_alg.h  net_bond.h  nn_alg.h  prim_euler_alg.h
server/: CMakeLists.txt  server.cc  server.h
src/: CMakeLists.txt  circle_routes.cc  ems_main.cpp
test/: CMakeLists.txt  solver.cc
